# static-coverage-badge

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.rst  class_index.html  function_index.html  index.html  pyproject.toml  status.json  z_1ff0e79755c87889___init___py.html  z_1ff0e79755c87889_main_py.html  z_1ff0e79755c87889_tests_py.html
.github/workflows/: test.yml
project/: main.py  tests.py
