[project]
name = "static-coverage-badge"
description = "Static coverage badge."
readme = "README.rst"
version = "0.0.1"
dependencies = [
    "coverage",
    "coverage-badge",
]
authors = [
    {name = "Artur Barseghyan", email = "artur.barseghyan@gmail.com"},
]
maintainers = [
    {name = "Artur Barseghyan", email = "artur.barseghyan@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development",
]
keywords = ["coverage", "badge"]
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://github.com/barseghyanartur/static-coverage-badge/"
Issues = "https://github.com/barseghyanartur/static-coverage-badge/issues"
Documentation = "https://static-coverage-badge.readthedocs.io/"
Repository = "https://github.com/barseghyanartur/static-coverage-badge/"
Changelog = "https://static-coverage-badge.readthedocs.io/en/latest/changelog.html"

[project.optional-dependencies]
all = ["static-coverage-badge[dev,test,docs]"]
dev = [
    "detect-secrets",
    "doc8",
    "ipython",
    "mypy",
    "pydoclint",
    "ruff",
    "twine",
    "uv",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-rst",
]
docs = [
    "sphinx<6.0",
    "sphinx-autobuild",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-no-pragma",
]

#[tool.setuptools]
#package-dir = {"" = "src"}
#
#[tool.setuptools.packages.find]
#where = ["src"]

# Build system information below.
[build-system]
requires = ["setuptools>=41.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 80

# Enable Pyflakes `E` and `F` codes by default.
lint.select = [
    "E",
    "F",
    "I",
    "Q",
]
lint.ignore = []
# Enable autofix for formatting and import sorting
fix = true
src = [
    "examples/hybrid_prompts",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs",
]
lint.per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.9.
target-version = "py39"

[tool.ruff.lint.isort]
known-first-party = [
    "project",
]
known-third-party = []

[tool.doc8]
ignore-path = [
    "docs/requirements.txt",
    "static_coverage_badge.egg-info/SOURCES.txt",
]

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "-vvv",
    "-q",
   "--cov=project",
   "--ignore=.tox",
   "--ignore=requirements",
   "--ignore=release",
   "--ignore=tmp",
   "--cov-report=html",
   "--cov-report=term",
   "--cov-report=annotate",
   "--cov-append",
   "--capture=no",
]
testpaths = [
    "**/test*.py",
    "test*.py",
    "*.rst",
    "**/*.rst",
]
pythonpath = [
    "",
]

[tool.coverage.run]
relative_files = true
omit = [
    ".tox/*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "@overload",
]

[tool.mypy]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pydoclint]
style = 'sphinx'
exclude = '\.git|\.tox|tests/data|'
require-return-section-when-returning-nothing = false
allow-init-docstring = true
arg-type-hints-in-docstring = false
